# temporal-plane

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  clippy.toml  deny.toml
.ai/: AGENTS.md  copilot-instructions.md  setup-links.sh
.ai/agents/: documentation.agent.md  engineer.agent.md  product-owner.agent.md  reviewer.agent.md  tester.agent.md
.ai/context/: Context_Index.md  Database_Schema.md  Domain_Glossary.md  Repository_Index.md  System_Architecture.md  Testing_Strategy.md  Third_Party_Integrations.md  glossary.jsonl  repositories.jsonl  schema.yaml
.ai/instructions/: coding-standards.md  git-workflow.md  naming-conventions.md  security-patterns.md  testing-conventions.md
.ai/prompts/: create-agent.prompt.md  document-generator.prompt.md  prompt-generator.prompt.md
.ai/skills/document-generator/: SKILL.md
.ai/skills/git-workflow/: SKILL.md
.ai/skills/planning/: SKILL.md
.ai/skills/security-scan/: SKILL.md
.ai/skills/skill-generator/: SKILL.md
.ai/skills/unit-test/: SKILL.md
.ai/update/: README.md  update.agent.md
.ai/update/scripts/: extract-endpoints.py  parse-csv.py  scan-repos.py  temporal-setup.py
.dex/: config.toml  sync-state.json  tasks.jsonl
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  publish-python.yml  release.yml
adapters/: README.md  __init__.py  _adapter_base.py  chat_assistant_adapter.py  ci_bot_adapter.py  coding_agent_adapter.py  review_tool_adapter.py
adapters/ai-dx-toolkit/: README.md  mnemix_adapter.py  temporal_plane_adapter.py
adapters/ai-dx-toolkit/tests/: test_adapter.py
adapters/tests/: test_host_adapters.py
crates/mnemix-cli/: Cargo.toml
crates/mnemix-cli/src/: cli.rs  errors.rs  main.rs  providers_runtime.rs
crates/mnemix-cli/src/cmd/: checkpoint.rs  export.rs  history.rs  import.rs  init.rs  mod.rs  optimize.rs  pins.rs  policy.rs  providers.rs  recall.rs  remember.rs  restore.rs  search.rs  show.rs  stats.rs  ui.rs  vectors.rs  versions.rs
crates/mnemix-cli/src/config/: mod.rs
crates/mnemix-cli/src/output/: human.rs  json.rs  mod.rs
crates/mnemix-cli/src/tui/: data.rs  mod.rs  render.rs  state.rs
crates/mnemix-cli/tests/: cli_flow.rs
crates/mnemix-core/: Cargo.toml
crates/mnemix-core/src/: branches.rs  checkpoints.rs  errors.rs  identifiers.rs  lib.rs  memory.rs  policy.rs  query.rs  retention.rs  traits.rs
crates/mnemix-lancedb/: Cargo.toml
crates/mnemix-lancedb/examples/: branch-experiment.rs
crates/mnemix-lancedb/src/: backend.rs  lib.rs
crates/mnemix-lancedb/tests/: backend_integration.rs
crates/mnemix-test-support/: Cargo.toml
crates/mnemix-test-support/src/: lib.rs
crates/mnemix-types/: Cargo.toml
crates/mnemix-types/src/: lib.rs
crates/temporal-plane-cli/: Cargo.toml
crates/temporal-plane-core/: Cargo.toml
crates/temporal-plane-lancedb/: Cargo.toml
crates/temporal-plane-lancedb/examples/: branch-experiment.rs
crates/temporal-plane-lancedb/src/: backend.rs  lib.rs
crates/temporal-plane-lancedb/tests/: backend_integration.rs
crates/temporal-plane-test-support/: Cargo.toml
crates/temporal-plane-types/: Cargo.toml
crates/temporal-plane-types/src/: lib.rs
docs/: branch-lifecycle.md  checkpoint-and-retention-policy.md  export-import.md  lancedb-rust-sdk-agent-guide.md  memory-model.md  mnemix-coding-guidelines.md  mnemix-plan-v3.md  mnemix-roadmap.md  progressive-disclosure.md  pypi-release-plan.md  release-checklist.md  repo-scaffold-spec.md  temporal-plane-plan-v3.md  temporal-plane-roadmap.md  versioning-and-restore.md
docs_site/: package.json  vercel.json
docs_site/.vitepress/: config.mts
docs_site/src/: index.md
examples/agent-memory-layer/: AGENTS.md  README.md  agent_wrapper.py
examples/ai-dx-toolkit/: README.md  example.py
examples/basic-recall/: README.md
examples/branch-experiment/: README.md
examples/chat-assistant/: README.md
examples/checkpoints/: README.md
examples/ci-bot/: README.md
examples/import-export/: README.md
examples/policy-runner/: README.md  ci_policy_check.sh  coding_agent_wrapper.py  pre_commit_policy.sh
examples/python-basic/: README.md  example.py
examples/review-tool/: README.md
python/: README.md  pyproject.toml  setup.py
python/mnemix/: __init__.py  _runner.py  _version.py  client.py  errors.py  models.py
python/temporal_plane/: __init__.py  _runner.py  _version.py  client.py  errors.py  models.py
python/temporal_plane.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/tests/: test_client.py  test_mnemix_aliases.py  test_models.py  test_runner.py
scripts/: build-python-wheel-with-cli.sh  check-linux-release-build.sh  check-python-bundled-wheel.sh  check-python-package.sh  check.sh  publish-release.sh  release.sh
tests/: README.md
website/: measure.cjs  process_icon.cjs  process_images.cjs  process_images.py  test.cjs  test_output.cjs
website/src/: App.tsx  index.css
workflow/decisions/: 001-replace-dex-with-repo-native-workflow-tracking.md  README.md
workflow/patches/: 0001-milestone-0-workspace-and-engineering-baseline.md  0002-milestone-1-core-domain-contract-freeze.md  0003-milestone-2-local-lancedb-backend-mvp.md  0004-milestone-3-human-first-cli-mvp.md  0005-milestone-4-progressive-disclosure-and-pinning-semantics.md  0006-milestone-5-version-aware-safety-features.md  0007-milestone-6-python-binding-and-first-adapter.md  0008-milestone-7-advanced-storage-workflows.md  0009-define-workspace-scaffold.md  0010-add-root-workspace-config.md  0011-scaffold-workspace-crates.md  0012-add-ci-and-helper-scripts.md  0013-validate-baseline-and-docs.md  0014-distill-agent-coding-guidelines.md  0015-set-up-ai-context-files-for-coding-agents.md  0016-bundle-cli-in-platform-specific-pypi-wheels.md  0017-rebrand-temporal-plane-to-mnemix.md  0018-prepare-v0-2-0-release-checklist-and-version-bump.md  0019-add-policy-runner-enforcement-adapters-and-examples.md  0020-evaluate-and-expose-policy-runner-via-mcp.md  0023-add-vector-browse-view-and-search-support-to-the-mnemix-tui.md
(+93 files in other folders)
