[workspace]
resolver = "3"
members = [
    "crates/temporal-plane-cli",
    "crates/temporal-plane-core",
    "crates/temporal-plane-lancedb",
    "crates/temporal-plane-test-support",
    "crates/temporal-plane-types",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/micahcourey/temporal-plane"
homepage = "https://github.com/micahcourey/temporal-plane"
documentation = "https://github.com/micahcourey/temporal-plane/tree/main/docs"
rust-version = "1.94"
authors = ["Micah Courey"]
description = "Temporal Plane: a local-first memory layer for AI coding agents"
keywords = ["memory", "agents", "lancedb", "time-travel", "local-first"]
categories = ["command-line-utilities", "database", "development-tools"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[profile.dev]
debug = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
