[workspace]
resolver = "3"
members = [
    "crates/mnemix-cli",
    "crates/mnemix-core",
    "crates/mnemix-lancedb",
    "crates/mnemix-test-support",
    "crates/mnemix-types",
]

[workspace.package]
edition = "2024"
version = "0.2.5"
license = "MIT"
repository = "https://github.com/micahcourey/mnemix"
homepage = "https://github.com/micahcourey/mnemix"
documentation = "https://github.com/micahcourey/mnemix/tree/main/docs"
rust-version = "1.94"
authors = ["Micah Courey"]
description = "Mnemix: a local-first memory layer for AI coding agents"
keywords = ["memory", "agents", "lancedb", "time-travel", "local-first"]
categories = ["command-line-utilities", "database", "development-tools"]

[workspace.dependencies]
anyhow = "1"
humantime = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[profile.dev]
debug = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
