[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemix"
dynamic = ["version"]
description = "Python binding for Mnemix — a local-first memory layer for AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Micah Courey" }]
keywords = ["ai", "memory", "lancedb", "cli", "agent-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/micahcourey/mnemix"
Repository = "https://github.com/micahcourey/mnemix"
Issues = "https://github.com/micahcourey/mnemix/issues"
Changelog = "https://github.com/micahcourey/mnemix/blob/main/CHANGELOG.md"

[project.scripts]
mnemix = "mnemix._runner:main"
mx = "mnemix._runner:main_alias"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]
release = [
    "build>=1.2",
    "twine>=5.1",
]

[tool.setuptools.dynamic]
version = { attr = "mnemix._version.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["mnemix*"]

[tool.setuptools.package-data]
mnemix = ["_bin/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
