[package]
name = "mnemix-test-support"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Test helpers for Mnemix"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
