[package]
name = "temporal-plane-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Shared value objects for Temporal Plane"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
